fixed calculator not accepting commas and not showing invalid inputs, added redText for errors (doesn't work yet)

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -177,5 +177,6 @@ Button:pressed {
 }
 
 .redText {
-	-fx-text-text-color: red;
+	-fx-text-fill: red;
+	-fx-text-inner-color: red;
 }
